jdp update cars that not searchable 07/30/2024